--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons8-distance-96.png
+    - assets/icons8-speed-64.png
+    - assets/icons8-storage-80.png
+    - assets/icons8-temperature-64.png
+    - assets/icons8-time-80.png
+    - assets/icons8-weight-100.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
