--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "cc206_converter_app",
-    "short_name": "cc206_converter_app",
+    "name": "converter_app",
+    "short_name": "converter_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
