--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\Gaby\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\Lenovo\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Developer\\flutter
