--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_svg: ^1.1.6
   intl: ^0.18.0
+  converter: ^0.3.6
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
