--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   flutter: 
     sdk: flutter
   cached_network_image: ^3.2.1
+  shared_preferences: ^2.2.2
   flutter_svg: ^1.1.6
   intl: ^0.18.0
   converter: ^0.3.6
